--- a/test.tex
+++ b/test.tex
@@ -743,9 +743,9 @@ so connecting $O_M$ and $O_B$, since $61/2 \approx F/a^{2}$ to 0.04 \%, and intr
 
 \subsection{The intervention of Sporadic Groups}
 
-With the tachyonic ratio $Q = R_{GC}/R = C/c$, the cardinal orders of the two giant sporadic groups enter (63 and 2 ppm)
+With the tachyonic ratio $U = R_{GC}/R = C/c$, the cardinal orders of the two giant sporadic groups enter (63 and 2 ppm)
 \begin{equation}
-\pi Q/a \approx O_M D n/H \approx O_B P a^{3/2}
+\pi U/a \approx O_M D n/H \approx O_B P a^{3/2}
 \end{equation}
 where $D = 196883$ is the Moonshine dimension of the Monster group.
 The above term $O_M^3$ appears in (0.08\%, 2.5\%,1\%, 2\% and 61 ppm):
@@ -785,12 +785,12 @@ O_MO_B\approx H^{2H/a} \approx (g_0/p)^a \approx (496/j)^{137} \approx \sqrt{2}(
 \end{equation}
 confirming the central role of 496. Note also (0.1 \%) that $O_MO_B \approx  n_{ph}/\delta^{1/2}$, where $n_{ph}\approx (3/\pi) exp(e^6/2)$ (to 0.2 \%) is the photon number in the visible universe. 
 
-From three of the above equations, by taking the $137^{th}$ root, one obtains, to 0.03 \%: $496/j \approx (ae^e/\Gamma)^{1/3}$
+From Eqs. (48), (52) and (54), by taking the $137^{th}$ root, one obtains, to 0.03 \%: $496/j \approx (ae^e/\Gamma)^{1/3}$
 Now $ae^e/\Gamma$ is close to $2ed_e$. More precisely (0.7 ppm):
 \begin{equation}
 a/\Gamma = \pi/\gamma \approx 2d_e \times e (p_0/p)^2 
 \end{equation}
-Thus, \textit{the Atiyah symmetry infers a relation between the three mathematical constants $e$, $\pi$ and $\gamma$ and the Electron magnetic moment $2d_e$}. It is remarkable that this is obtained from singularities involving the two Monster groups. This introduces the next section.
+Thus, \textit{the Atiyah symmetry infers a relation between the three mathematical constants $e$, $\pi$ and $\gamma$ and the electron magnetic moment $2d_e$}. It is remarkable that this is obtained from singularities involving the two Monster groups. This introduces the next section.
 
 \markright{F.M. Sanchez,\ V.A. Kotov,\ M. Grosmann,\ D. Weigel,\ R. Veysseyre,\ C. Bizouard,\ N. Flawisky,\ D. Gayral,\ L. Gueroult, \textit{Back to Cosmos}}
 \section{The fine-tuning with basic mathematical constants}
@@ -936,9 +936,9 @@ confirming the holic attribution (section 6) of power 7 for a field parameter, a
 \begin{equation}
 Z \approx ap^{2} \pi^{4} / 137 d_{e} n
 \end{equation}
-This value is confirmed by the tachyonic ratio $Q$ and the Planck Wien term $5/w$ (section 7.1) (3\%, 1\%, 60 ppb) 
+This value is confirmed by the tachyonic ratio $U$ and the Planck Wien term $5/w$ (section 7.1) (3\%, 1\%, 60 ppb) 
 \begin{equation}
-Q = R_GC/R \approx P^e \approx W^{\sqrt a} \approx 48 \sqrt{5/w}~ O_M Z
+U = R_{GC}/R \approx P^e \approx W^{\sqrt a} \approx 48 \sqrt{5/w}~ O_M Z
 \end{equation}
 the Z value is also confirmed by its ppb liaison with the Janko pariah group order \cite{Janko} $J_3 = 50232960 $ 
 \begin{equation}
