--- a/test.tex
+++ b/test.tex
@@ -147,7 +147,7 @@ The existence of relations that are not explained by known physical theories, is
 
 Eddington interpreted rightly the Cosmic Large Number correlations, as recalled in this article. However, his work was rejected for obscure reasons and this rejection was enforced by the fact that about 30 dimensionless parameters appear as 'free parameters' in the Particle standard model. They are misnamed since far from being really 'free', they are imposed by Nature. Nevertheless, a large majority of theorists believe they are due to chance, leading to a separation between Physics and Mathematics, not to speak of Biology. Thus, through the above Anthropic Principle, a majority believe in the Multiverse conundrum, a multiplicity of sterile Universe \cite{Carr}.
 
-\textit{This article shows that physics is a unique part of presently incomplete mathematics}. We refute here the Multiverse hypothesis by showing very precise fine-tuning (untill $10^{-9})$ between main physical and the mathematical constants: $\pi$, $e$ and $\gamma$, the Euler-Mascheroni constant. Also, this study implies the 26 sporadic groups and confirms the super-string theory, but with complete rehabilitation of the \textit{tachyonic} bosonic string theory.
+\textit{This article shows that physics is a unique part of presently incomplete mathematics}. We refute here the Multiverse hypothesis by showing very precise fine-tuning (untill $10^{-9})$ precision between main physical and the mathematical constants: $\pi$, $e$ and $\gamma$, the Euler-Mascheroni constant. Also, this study implies the 26 sporadic groups and confirms the super-string theory, but with complete rehabilitation of the \textit{tachyonic} bosonic string theory.
 
 \textit{A decisive point of physics is the energy conservation, the First Principle of Thermodynamics.} Theorists associate it with time uniformity, but a more direct and logical explanation is that cosmos is a computer, so Intelligent Life receives a justification: to help the cosmological computation. This Inverted Anthropic Principle answers the first of all questions: why one asks questions? We propose that the parameters are optimal bases in a deterministic computing Cosmos. They appear indeed in DNA characteristics and triple-point temperatures of mammals and main molecules \cite{Sanchez1}.
 
@@ -188,9 +188,9 @@ periodicity $\delta n = 8$ [19]. This is the origin of the name `Topological Axi
 
 We look here for a systematic organization of dimensionless physical quantities stemming from cosmology, astrophysics, particle   physics, theoretical physics and mathematics. The most famous fine tuning implies cosmic quantities, awkwardly called the `Double Large Number Problem`. If it is a `problem` for standard evolutionary cosmology, it is a precious clue in the steady-state cosmology based on the \textit{Perfect} Cosmological Principle (spatial \textit{and} temporal homogeneity).
 This Cosmological Fine-Tuning leads directly to a \textit{Gravitational Hydrogen molecule model of the visible universe} \cite{Sanchez1}.
-This defines the Universe horizon radius $R = 2a_{G} \lambdabar_{e}$, where the factor 2 comes from the bi-atomic structure, and where $\lambdabar_{e} = \hbar/cm_{e}$ is the Electron Compton reduced wavelength, while the gravitational coupling constant is: $a_{G} = \hbar c/Gm_{p}m_{H}$, where $m_p$ and $m_H$ are the proton and hydrogen atom masses. So, \textit{the speed $c$ is eliminated}, in accordance with Coherent Cosmology which needs signal celerity far exceeding $c$. This gives $R \approx 13,812~Gly $, corresponding to a Hubble constant 70.790 (km/s)/Megaparsec, compatible with the most recent measurements \cite{Bonvin}: 72(3) (km/s)/Megaparsec. The latter confirms the value measured by the 1a type novae, while the standard optimization of 6 parameters results in a lower value, by $9\%$.
+This defines the Universe horizon radius $R = 2a_{G} \lambdabar_{e}$, where the factor 2 comes from the bi-atomic structure, and where $\lambdabar_{e} = \hbar/cm_{e}$ is the Electron Compton reduced wavelength, while the gravitational coupling constant is: $a_{G} = \hbar c/Gm_{p}m_{H}$, where $m_p$ and $m_H$ are the proton and hydrogen atom masses. So, \textit{the speed $c$ is eliminated}, in accordance with the Coherent Cosmology which needs signal celerity far exceeding $c$. This gives $R \approx 13,812~Gly $, corresponding to a Hubble constant 70.790 (km/s)/Megaparsec, compatible with the most recent measurements \cite{Bonvin}: 72(3) (km/s)/Megaparsec. The latter confirms the value measured by the 1a type novae, while the standard optimization of 6 parameters results in a lower value, by $9\%$.
 
-Consider the wavelength of the visible Universe with critical mass $M= Rc^2/2G$: $$\lambdabar_{M} = \hbar /Mc \approx 4.00 \cdot 10^{-96} m$$. This `topon` corresponds to the value $n \approx 2e^e$, close to the touchstone n = 30 of the Topological Axis, see Fig. 1. This scheme illustrates the function $f(n + 4) = f^{2}(n)$
+Consider the wavelength of the visible Universe with critical mass $M= Rc^2/2G$: $$\lambdabar_{M} = \hbar /Mc \approx 4.00 \cdot 10^{-96} m$$ This `topon` corresponds to the value $n \approx 2e^e$, close to the touchstone n = 30 of the Topological Axis, see Fig. 1. This scheme illustrates the function $f(n + 4) = f^{2}(n)$
 and stems from the imbrication of relations of the form $\lambdabar_{e} /l_{micro} \sim (l_{macro} /\lambdabar_{e})^{2}$, followed by $ l_{macro} /\lambdabar_{e} \sim (\lambdabar_{e} /l^{\prime}_{micro} )^{2}$, leading to:
 $$
 \begin{array}{ll}
@@ -237,7 +237,7 @@ In the steady-state cosmology of Bondi, Gold and Hoyle \cite{Sanchez1}, such a r
 \section{The Toponic Holographic Quantification}
 \markright{F.M. Sanchez,\ V.A. Kotov,\ M. Grosmann,\ D. Weigel,\ R. Veysseyre,\ C. Bizouard,\ N. Flawisky,\ D. Gayral,\ L. Gueroult, \textit{Back to Cosmos}}
 
-In the above steady-state cosmological model, the Perfect Cosmological Principle implies the invariance of the Universe mean mass density $\rho$, defined at large. This preducts also the exponential recession of galaxy groups, with time constant $R/c$ being compensated by the appearance of $m_n$ massive neutrons at rate $c^{3} /Gm_{n}$, 
+In the above steady-state cosmological model, the Perfect Cosmological Principle implies the invariance of the Universe mean mass density $\rho$, defined at large. This predicts also the exponential recession of galaxy groups, with time constant $R/c$ being compensated by the appearance of $m_n$ massive neutrons at rate $c^{3} /Gm_{n}$, 
 corresponding to about one neutron by century in about a cathedral volume. 
 The invariant visible Universe radius $R$ is then defined by the Schwarszchild relation, so that each topon, with wavelength $\lambdabar_M = \hbar/Mc = 2l_{P}^{2} /R$ is the center of an equivalent $R$-radius black hole, of critical mass $M = Rc^{2} /2G$. The Bekenstein-Hawking entropy of this black-hole Universe shows an 1D extension \cite{Sanchez1} of the standard Holographic Principle, until now devoted to 3D application only \cite{Bousso}:
 \begin{equation}
