--- a/test.tex
+++ b/test.tex
@@ -345,7 +345,7 @@ $$\sqrt{(R_{1} /a_{w} l_{K})} \approx 4\pi p/p_{0} \leftrightarrow t_{K} \approx
 
 This $t_K$ value will be confirmed, in the ppb range, by the value deduced from the above $t_{K} /t_{e} = (a_{G} a_{w})^{1/2}$, using values of $a_{w}$ and $a_{G}$ defined, again in the ppb range, in section 9.4. 
 
-From the holographic two-step interaction \cite{Sanchez1}, it was deduced that the Kotov period is associated with the photon mass. With the above value, it is $m_{ph} = \lambdabar/c^{2} t_{K} \approx 1.222 \times 10^{-55}$ kg, and the graviton mass is: 
+From the holographic two-step interaction \cite{Sanchez1}, it was deduced that the Kotov period is associated with the photon mass. With the above value, it is $m_{ph} = \hbar/c^{2} t_{K} \approx 1.222 \times 10^{-55}$ kg, and the graviton mass is: 
 $m_{gr}\, = m_{ph} /a_{w} \approx 3.722 \times 10^{-67} $ kg.
 The ratios with electron mass (Fig.1) corresponds respectively to n = 24 and $n = \Gamma$, the Atiyah constant (section 8.2). One notes the relation (0.1\%), very usefull in the following:
 \begin{equation}
@@ -357,7 +357,7 @@ with $O_M$ the cardinal order of the Monster group.
 
 With $t = R/c$, the relation $(t t_{K}^2)^{1/3} \approx 10.8$ years, compatible with the famous 11 years sun period was noted. It was proposed that this unexplained phenomenon, responsible for moderate periodic climate variation, was also of flickering cosmic origin \cite{Sanchez3}. This hypothesis has been recently confirmed by the straight temporal profile of the phenomena, showing it is tied to a quantum process \cite{Kotov2}.
 
-Remarkable enough, a `mysterious` period $\approx 1/9$ days of the Sun's pulsations has been predicted long before its actual discovery in 1974. Namely, 73 years ago, French amateur astronomer Sevin (1946) claimed that « la p\'{e}riode propre de vibration du Soleil, c'est-a-dire la periode de son infra-son (1/9 de jour), a jou\'{e} un role essentiel dans la distribution des plan\`{e}tes sup\'{e}rieures». Presumably, the Sevin's «vibration period» of the Sun was merely an issue of his reflections about resonances and distances inside the solar system. Nevertheless, solar pulsations with exactly that period were discovered, after decades, - and independently of the Sevin's paper, - by a few groups of astrophysicists. Soon the presence of the same period, or timescale, was found in other objects of Cosmos too \cite{Kotov1}.
+Remarkable enough, a `mysterious` period $\approx 1/9$ days of the Sun's pulsations has been predicted long before its actual discovery in 1974. Namely, 73 years ago, French amateur astronomer Sevin (1946) claimed that « la p\'{e}riode propre de vibration du Soleil, c'est-a-dire la p\'{e}riode de son infra-son (1/9 de jour), a jou\'{e} un role essentiel dans la distribution des plan\`{e}tes sup\'{e}rieures». Presumably, the Sevin's «vibration period» of the Sun was merely an issue of his reflections about resonances and distances inside the solar system. Nevertheless, solar pulsations with exactly that period were discovered, after decades, - and independently of the Sevin's paper, - by a few groups of astrophysicists. Soon the presence of the same period, or timescale, was found in other objects of Cosmos too \cite{Kotov1}.
 
 Opponents emphasize often that $t_{K}$ is very close to the 9th harmonic of the mean terrestrial day: the corresponding ratio - of the length of a day to the $t_{K}$ period - is equal to 8.99943(1), - and claim thus the $t_{K}$ oscillation of the Sun should be regarded as an artifact (see, e.g., Grec and Fossat, 1979; Fossat et al., 2017). As a matter of fact, however, the $t_{K}$ period occurs to be the best commensurate timescale for the spin rates of all the most massive and fast-rotating bodies of the solar system, in general.
 
@@ -365,7 +365,7 @@ This is obvious from Fig. 2, which shows the resonance spectrum $F( \nu )$, calc
 
 It seems very puzzling also that the spatial scale $l_{K} \approx 19.24$ A.U. occurs to be the best commensurate with orbital sizes of the main planetary orbits of the solar system, - see Fig. 3, where the resonance spectrum $F( \nu )$ is plotted for 11 orbits, including those of asteroid belt, Pluto and Eris (orbital «diameters» were approximated by the major axes, and for the inner orbits they were multiplied by $\pi$). The primary peak - of the best commensurability - corresponds to the spatial scale 9600(120) light sec., or 19.24(3) A.U., at $4.7 \theta$ C.L. (Kotov, 2013).
 
-Close binaries are characterized by the $t_{\Theta}$ resonance too, with the $\pi$ number as a factor of ideal incommensurability of motions, or frequencies (Kotov, 2018). Fig. 4 shows the resonance spectrum, or metrics of motion, $F_{1} (\nu) \equiv F(\pi \cdot \nu/2)$, computed for 5746 close binaries, including cataclysmic variables and related objects. The major peak, with C.L. of about $7 \theta$, corresponds to the timescale 9590(70) s, coinciding within the error limits with $t_{K}$ (the stellar data were taken from all available binary stars catalogues and original papers).
+Close binaries are characterized by the $t_{K}$ resonance too, with the $\pi$ number as a factor of ideal incommensurability of motions, or frequencies (Kotov, 2018). Fig. 4 shows the resonance spectrum, or metrics of motion, $F_{1} (\nu) \equiv F(\pi \cdot \nu/2)$, computed for 5746 close binaries, including cataclysmic variables and related objects. The major peak, with C.L. of about $7 \theta$, corresponds to the timescale 9590(70) s, coinciding within the error limits with $t_{K}$ (the stellar data were taken from all available binary stars catalogues and original papers).
 
 To compute the $F_{1} (\nu)$ spectrum, the program finds - for each test frequency $\nu$ - deviations of ratios $(2\nu_{i} /\pi \nu) k \geq 1$ from the nearest integers, and determines then the least-square minimum of such deviations. Here, $\nu$ is the test frequency, $\nu_{i}$ minus the frequency of a given object, i = 1, 2, ...N - the ordinal number, with N, the total number of observed periods in a sample of objects, and the power k = 1 or -1. The factor of two in Eq. (2) takes into account that second half of the orbit repeats the first one, and the transcendental number $\pi$ appears as a factor of orbital stability, or «ideal» incommensurability, of motions, or frequencies (the $\pi$ number, in fact, characterizes geometry of space; for details see Kotov, 2018).
 
@@ -383,7 +383,7 @@ It was shown in fact, that a number of superfast, with periods inferior to 2 day
 \begin{figure}
 \centering
 \includegraphics[width=7cm,height=5.5cm]{./figures/figure2}
-\caption{Same as Fig. 2, for N = 11 sizes `diameters` of the solar system (with c = 1 and the $\pi$ actor for inner orbits). The highest peak corresponds to the spatial scale 9600(120) light sec.}
+\caption{Same as Fig. 2, for N = 11 sizes `diameters` of the solar system (with c = 1 and the $\pi$ factor for inner orbits). The highest peak corresponds to the spatial scale 9600(120) light sec.}
 \label{fig:figure_label}
 \end{figure}
 
@@ -403,7 +403,7 @@ It was shown in fact, that a number of superfast, with periods inferior to 2 day
 
 \subsection{The Tifft, Arp and Pioneer effects}
 
-Another unexplained effect is the 75(5) km/s periodicity in the galactic redshift \cite{Tifft}. Now, this speed corresponds to the quantum resonance: $$\nu_{n} = nv_{1} =n\hbar /r_{e} m_{F} $$ where $r_{e} = \lambdabar_e/a$ is the electron classical radius and $m_{F} = m_{e}\sqrt{a_{w}}$ is the Fermi mass.
+Another unexplained effect is the 75(5) km/s periodicity in the galactic redshift \cite{Tifft}. Now, this speed corresponds to the quantum resonance: $$\Nu_{n} = Nv_{1} = N\hbar /r_{e} m_{F} $$ where $r_{e} = \lambdabar_e/a$ is the electron classical radius and $m_{F} = m_{e}\sqrt{a_{w}}$ is the Fermi mass.
 
 The Halton Arp observations of chains of galaxies with different redshifts \cite{Arp} was also rejected. But it could be the sign of the galactic regeneration constantly maintaining the visible Universe mass: this is sustained by the following section proving the invariance of the mean mass density $\rho_{c}$.
 
@@ -434,7 +434,7 @@ This is a dramatic geometrical confirmation (Fig. 6) of the visible Universe –
 \centering
 \includegraphics[width=5cm,height=6cm]{./figures/triaxis.png}
 \caption {\textit{Geo-dimensional Universe-Grandcosmos couple}, with unit length the Electron Compton reduced wavelength. 
-In a 3D Super-space, logarithms of physical ratios are considered vectors. The Grandcosmos radius appears as the norm of the vector using for length and time projections canonical values.
+In a 3D Super-space, logarithms of physical ratios are considered vectors. The Grandcosmos radius appears as the norm of the vector using for length and time projections the same value $R/\lambdabar_e$.
 %that of the Hubble radius, and for mass ratio $M^{\prime}/m_e$.
 $M^{\prime}$ being the critical mass in the Grandcosmos reduced spherical hologram, this is a dramatic geometrical confirmation of the Extended (2D-1D) Holographic Principle applied to the Bekenstein-Hawking Universe entropy. The Grandcosmos existence cannot be denied since the relation involving \textit{natural} logarithms with $e$ and $a$ reach precision $10^{-7}$.} 
 \end{figure}
@@ -456,10 +456,7 @@ In his three first minutes of cosmology (sept.1997), the first author obtained t
 l \{\hbar,G,m\} = \hbar^{2} /Gm^{3} \approx R/2
 \end{equation}
 but it took nine years to get this published \cite{Sanchez3}, and it appeared later \cite{Sanchez1} that $m$ must be considered more precisely as the cubic root of the product 
-$
-m_{e} \cdot m_{p} \cdot m_{H}$
-
-Moreover, the above critical condition
+$ m_{e} \cdot m_{p} \cdot m_{H}$. Moreover, the above critical condition
 links the time $t = R/c$ and the mean mass density by the $c$-free formula:
 \begin{equation}
 \rho_{c} = 3/8\pi Gt^{2} \approx 9.41198 \times 10^{-27} kg \cdot m^{-3}
