--- a/test.tex
+++ b/test.tex
@@ -1173,6 +1173,11 @@ It is now clear that present mathematics and Particle Physics are incomplete, an
 \item 7/ The Monster group will be connected to the pariah groups, especially the Janko one $J_3$.
 \end{itemize}
 
+\begin{equation}
+2^{2^{{2^{2^2 - 1}-1}}-1}-1
+\end{eqiuation}
+
+
 
 \section*{Acknowledgements}
 The authors salute the memory of Sir Michael Atiyah. His comments were precious. His constant, introducing the Euler-Mascheroni constant in the fine-tuning research has considerably helped our task
