--- a/test.tex
+++ b/test.tex
@@ -1175,7 +1175,7 @@ It is now clear that present mathematics and Particle Physics are incomplete, an
 
 \begin{equation}
 2^{2^{{2^{2^2 - 1}-1}}-1}-1
-\end{eqiuation}
+\end{equation}
 
 
 
