--- a/test.tex
+++ b/test.tex
@@ -576,11 +576,14 @@ Holographic Relation, using the wavelengths of the electron, proton and hydrogen
 The above relation gives $T_{CMB} \approx 2.73 K$. With the measured temperature of the cosmic
 background, there is a small gap compatible with $(H/p_G)^2 p/6\pi^5 $, where $p_{G}^{2} = P^{2} /2^{127}$ , with $P = \lambdabar_{e} /l_{P}$. 
 This eliminates $l_{P}$, producing a relation independent of $G$, implying $T_{CMB} \approx 2.725820805$ Kelvin:
-$$2^{127} = 2\pi^{2} \lambda_{CMB}^{3} /\lambdabar_{e} \lambdabar_{H}^2$$
+$$2^{2^{{2^{2^2 - 1}-1}}-1}-1 = 2\pi^{2} \lambda_{CMB}^{3} /\lambdabar_{e} \lambdabar_{H}^2$$
 which is the area of the 4-sphere of radius $\lambda_{CMB} / \lambdabar_{m}$, where $\lambdabar_{m} = (\lambdabar_{e} \lambdabar_{H}^2)^{1/3} $ proving the relevance of
 the Lenz-Wyler approximation for the Proton/Electron mass ratio $p_0 = 6\pi^{5}$, (see Section 9.2). Recall
 that $2^{127} - 1$ is the most famous prime number in the history of Mathematics, being the last term of
-the Combinatorial Hierarchy \cite{Sanchez1} of special imbricated Mersenne numbers 3, 7, 127, the sum of which is 137.
+the Combinatorial Hierarchy \cite{Sanchez1} of special imbricated Mersenne numbers 3, 7, 127, the sum of which is 137:
+%\begin{equation}
+%2^{2^{{2^{2^2 - 1}-1}}-1}-1
+%\end{equation}
 
 \subsection{The Holic Principle and CCO}
 
@@ -1172,12 +1175,6 @@ It is now clear that present mathematics and Particle Physics are incomplete, an
 \item 6/ The Lucas-Lehmer series, in connection with the the canonical generators ($\sqrt{n}+\sqrt{(n+1)}$), especially the Planck-Fermat's one ($1+\sqrt2$) will define $a$.
 \item 7/ The Monster group will be connected to the pariah groups, especially the Janko one $J_3$.
 \end{itemize}
-
-\begin{equation}
-2^{2^{{2^{2^2 - 1}-1}}-1}-1
-\end{equation}
-
-
 
 \section*{Acknowledgements}
 The authors salute the memory of Sir Michael Atiyah. His comments were precious. His constant, introducing the Euler-Mascheroni constant in the fine-tuning research has considerably helped our task
