--- a/test.tex
+++ b/test.tex
@@ -1311,7 +1311,9 @@ d'espace d'une wustite de tri-incommensurabilite cubique et sur les groupes de
 Bravais de sa famlille cristalline dans l'espace euclidien a six dimensions''.
 Compt. Rend. Acad. Sci. Paris 305, Ser. II, 349--352 (1987).
 
-\bibitem{Atiyah2} Atiyah Michael, ``Private communication`` (December 2018). 
+\bibitem{Atiyah2} Atiyah Michael, ``Private communication`` (December 2018).
+
+\bibitem{Moulin} Moulin T. Symposium 4, 11eme congres International de Cybernetique. namur, Aout 1986: Utilisation e physique et biologie de referentiels spatio-structuro-temporels engendres par des Relateurs Arithmetiques. Moulin T. et Groupe Systema. Relateurs Arithmetiques (2 tomes): Ebauche du formalisme: avant la premiere jonction avec les structures de Lie. ENSTA.(1993). See also: Moulin T. Vallet C. Nature cognition and System 1. p294. Carvallo M. (Ed). Kluwer Acad. Publisher. (1988)
 
 \end{thebibliography}
 \vspace*{-6pt}
