--- a/test.tex
+++ b/test.tex
@@ -837,17 +837,10 @@ with $137 - 3 = 7 + 127$ showing the Combinatorial Hierarchy terms \cite{Sanchez
 Armand Wyler published a value approaching $a$ to 0.6 ppm and confirmed the pertinence
 of the Lenz approximation which plays a central role above: $p_{0} = 6\pi^{5}$ approaching $p$ to 18.824 ppm.
 
-A confirmation of a symmetry between $a$ and 137 is the following relation involving $H$, the
-Hydrogen electron mass ratio, precise to 83 ppb:
-$$a/137 \approx (p_0 H)^{1/2} /p$$
-One observes that the rejection of Wyler's work, due to a non-perfect formula for the $p$ and $a$ values, is a new
-manifestation of the general ignorance of the Principle of Hierarchy.
-
-A confirmation of a symmetry between $a$ and 137 is the two following approximations for $p$ with the same imprecision 80 ppb, so leading to the ppb relation:
- $$p \approx (137/a) (p_0 H)^{1/2}  \approx EH^3/d_e^2jFD $$ 
-where $D = 196883$ is the Moonshine Monster dimension \cite{Conway}, which appears also, to $10^{-7}$, to be $(\pi_p P/d_eF)^{1/2}/H$, with $\pi_p = (p/6)^{1/5}$, so confirming again the pertinence of Wyler's approach. 
-
-Note also that the Lenz-Wyler formula is nothing but the product of the area by the volume of a 3D cube with side $\pi $. If one consider a 3D cube with side 5, privileging again the identification dimension = exponent, this gives $6 \times 5^5 = 137^2 - 19 $. This is not a chance coincidence because this relation has long time been deduced from basic considerations on quarks \cite{Sanchez1}. Indeed with $u = 5 $ and $d = 6 $, the combination $uud = 150 $, whose power 3/2 is close to $H$, while the combination $udd \approx (n/a)^2 $. This leads to (0.012 \%) $6\times 5^5 \approx (aH/n)^2 $  
+The symmetry between $a$ and 137 is confirmed by the 83 ppb relation $$a/137 \approx (p_0 H)^{1/2} /p$$ involving $H$, the Hydrogen electron mass ratio. also, there is the ppb relation: $p \approx (137/a) (p_0 H)^{1/2}  \approx EH^3/d_e^2jFD $ where $D = 196883$ is the Moonshine Monster dimension \cite{Conway}, which appears also, to $10^{-7}$, to be $(\pi_p P/d_eF)^{1/2}/H$, with $\pi_p = (p/6)^{1/5}$, so confirming again the pertinence of Wyler's approach. Another ppb relation , with $u = a/137$ :
+$$ X \approx (upn^2)^2 \approx (d_e \beta H^2/u)^3$$ close to the cubic root of the Systema number \cite{Moulin} $N_{sys} = 2^{65}\cdot 3^{41} \cdot 5^{28}$. The deviation reveals $p_a = 6 (a^2 - 137 ^2)^{5/2}$(16 ppm):
+$$ X^3 \approx N_{sys} /a^{3/2}$$
+The Lenz-Wyler formula is the product of the area by the volume of a 3D cube with side $\pi$. If one consider a 3D cube with side 5, privileging again the identification dimension = exponent, this gives $6 \times 5^5 = 137^2 - 19 $. This is not a chance coincidence because this relation has long time been deduced from basic considerations on quarks \cite{Sanchez1}. Indeed with $u = 5 $ and $d = 6 $, the combination $uud = 150 $, whose power 3/2 is close to $H$, while the combination $udd \approx (n/a)^2 $. This leads to (0.012 \%) $6\times 5^5 \approx (aH/n)^2 $  
 Note that, with $q = 2^{12}$ to 0.03 \%, 2.5 \% and 41 ppm:
 $$R_{GC}/\lambdabar_e \approx q\times 5^{137} \approx 6^{137}/q^2 \approx 6^{128}/(1+1/\sqrt2)$$
 Since $R/\lambdabar_e \approx 2^{128}$, the decomposition of 6 leads to a natural Universe-Grandcosmos partition, and to the following approximation for the tachyonic celerity ratio (0.01\%) 
