--- a/test.tex
+++ b/test.tex
@@ -1152,26 +1152,28 @@ the Holic Principle, which explains why normal space has 3 dimensions.
 
 In short, the rediscovered Cosmos unifies the two main modern cosmologies in a rapid matter-
 antimatter oscillatory bounce. The Cosmos appear as \textit{simple, unique, permanent, computational,
-deterministic, trans-planckian, cyclic, topological and inverse-anthropic}.
+deterministic, trans-planckian, cyclic, topological and inverse-anthropic}. It is now clear that present mathematics and Particle Physics are incomplete, and this Coherent Cosmology announces a reunification of \textit{Philosophy, Mathematics, Physics, Chemistry, Computational Science and Biology}.
 
 \markright{F.M. Sanchez,\ V.A. Kotov,\ M. Grosmann,\ D. Weigel,\ R. Veysseyre,\ C. Bizouard,\ N. Flawisky,\ D. Gayral,\ L. Gueroult, \textit{Back to Cosmos}}
 \section{Predictions}\markright{F.M. Sanchez,\ V.A. Kotov,\ M. Grosmann,\ D. Weigel,\ R. Veysseyre,\ C. Bizouard,\ N. Flawisky,\ D. Gayral,\ L. Gueroult, \textit{Back to Cosmos}}
 
-It is now clear that present mathematics and Particle Physics are incomplete, and this Coherent Cosmology announces a reunification of \textit{Philosophy, Mathematics, Physics, Chemistry, Computational Science and Biology}. In particular, the pre-Socratic Parmenide philosophy of Permanence must be reconsidered favorably. Eddington's Fundamental Theory must be revisited, especially the genesis of his Large Number, so clearly tied to the $16 \times 16$ symmetric matrix.
+ 
+%In particular, the pre-Socratic Parmenide philosophy of Permanence must be reconsidered favorably.
 
       This article leads to many predictions, in particular:
 \item 1/  The very large infra-red telescopes in preparation will show in the very far field old galaxies instead of expected young ones. Then no artifice, such as inflation, dark energy, multiverse ..., will not save the standard evolutionary model, based on the impefect cosmological principle.
 \item 2/ The CMB temperature will appear invariant. 
 \item 3/ The Particle Physics will integrate the Koide relation together with the Koide-Sanchez constant, and introduce massive gluons and composite quark down.
-\item 4/ Informatics software should be boosted by the principle of multi-base computation.
+\item 4/ Computational software should be boosted by the principle of multi-base computation.
 \item 5/ The multiple connections with the DNA chain seems to imply it is a 1D hologram. Recent studies \cite{Widom} are on this way.
 \item 6/ The Lucas-Lehmer series, in connection with the the canonical generators ($\sqrt{n}+\sqrt{(n+1)}$), especially the Planck-Fermat's one ($1+\sqrt2$) will define $a$.
 \item 7/ The Monster group will be connected to the pariah groups, especially the Janko one $J_3$.
+\item 8/ The Eddington's Fundamental Theory will be revisited, especially the genesis of his Large Number, so clearly tied to the $16 \times 16$ symmetric matrix.
+\item 9/ The Moulin systemic approach will be reconsidered.
 \end{itemize}
 
 \section*{Acknowledgements}
-The authors salute the memory of Sir Michael Atiyah. His comments were precious. His constant, introducing the Euler-Mascheroni constant in the fine-tuning research has considerably helped our task
-of proving the existence of a fundamental theory. We also thank helpful discussions with the 
+The authors salute the memory of Sir Michael Atiyah. His comments were precious. His constant has considerably helped our task of proving the existence of a fundamental theory. We also thank helpful discussions with the 
 mathematician Anatole Khelif and private communication by Joel Sternheimer about his scale factor, 
 we called $j$ in his honor.
 %
