--- a/test.tex
+++ b/test.tex
@@ -170,7 +170,7 @@ The Space-Time-Matter Holic dimension n = 30 (section 6) is tied to $c$ times th
 \textit{In the micro-physics side, with the same length unit, the Electron Compton reduced wavelength}, Bott reductions from n = 30 lead to the \textit{gauge bosons}: n = 22 for the GUT one, ($10^{16}$ GeV), n = 14 for the weak one and n = 6 for the (\textit{massive}) gluons, about 10 MeV.
 For the intermediary superstring value n = 10, there is the mean \textit{Pion}. For k $\approx \pi$, n $\approx \gamma \times \Gamma$, Y $\approx 496^2$ the square of the Green-Schwarz string dimension and the tenth root of the Monster cardinal order, it is the \textit{Brout-Englert-Higgs boson} (125 GeV). For k $\approx 2e^e$, it is the \textit{topon}, the visible Universe wavelength, the space quantum, which identifies with the mono-radial unit length of the Bekenstein-Hawking Universe entropy (section 3).
    \textit{With unit $2\pi$ times the Nambu mass}, n = 24 corresponds to the \textit{photon mass}, while n $\approx 26$, to the \textit{graviton mass} \cite{Sanchez1}.}
-    \textit{The central dimension is n = 16, for a total $2^7$ of string dimensions in the Bott sequence, the reunion of eight 1D-2D holo-graphic relations. This suggests that the whole schema is tied to the Eddington's matrix $16\times 16$}.
+    \textit{The central dimension is n = 16, for a total $2^7$ of string dimensions in the Bott sequence, the reunion of eight 1D-2D holographic relations. This suggests that the whole schema is tied to the Eddington's matrix $16\times 16$}.
 \label{fig:figure_label}
 \end{figure*}
 
@@ -507,22 +507,22 @@ confirms the above Planck's wall breakdown.
 
 In the hypothesis of an Arithmetical Cosmos, the ultimate equations must be diophantine. The
 simplest one is $T^{2} = L^{3}$, where $T$ is a time ratio and $L$ a length one, resolved, since 2 and 3 are 
-co-prime, by $$T^{2} = L^{3} = N^{6}$$ where N is a whole number, showing the classical 6D phase-space of point mechanics. Considering the exponents, this particularizes the usual 3D space, but attribute 2 dimensions for the Time, in conformity with an independent study \cite{Bars}.
+co-prime, by $$T^{2} = L^{3} = N^{6}$$ where N is a whole number, showing the classical 6D phase-space of point mechanics. Considering the exponents, this particularizes the usual 3D space, but attributes 2 dimensions for the Time, in conformity with an independent study \cite{Bars}.
 
 \textit{This is the degenerate arithmetic form of the spatio-temporal holographic principle}.
 
 This is also the third Kepler's law, but its diophantine form gives $L = n^{2}$, the orbit law in the Hydrogen atom and in our
-Gravitational Molecule model, where the visible Universe corresponds to the first orbital. This suggests at once the existence of a Grandcosmos. This is also induced by the overall symmetry of the Topological Axis, which, moreover, favors the
+Gravitational Molecule model, where the visible Universe corresponds only to the first orbital. This suggests at once the existence of a Grandcosmos. This is also induced by the overall symmetry of the Topological Axis, which, moreover, favors the
 dimension n = 30, the natural extension of the above diophantine equation:
 \begin{equation}
 T^{2} = L^{3} = M^{5} = N^{30}
 \end{equation}
-where $M$ is a mass ratio. Recall that the lifetime of an unstable particle depends on the $5^{th}$ power of its mass. This holic dimension 30 is the touchstone of the Topological axis, from which gauge bosons are deduced by Bott reductions [19] (Fig. 1)
+where $M$ is a mass ratio. Recall that the lifetime of an unstable particle depends on the $5^{th}$ power of its mass. This holic dimension 30 is the touchstone of the Topological axis, from which the gauge bosons are deduced by Bott reductions [19] (Fig. 1).
 
-This is called the Holic Principle, but limted to the apparent MLT world. The Complete Holic
-Principle \cite{Sanchez4} involves a field term $F^{7}$, and so introduces the dimension $30 \times 7 = 210$. It is confirmed by (to 15 ppm, 1.1 ppm, 56 ppm):
+This is called the Holic Principle, but limited to \textit{the apparent MLT world}. The Complete Holic
+Principle \cite{Sanchez4} involves a field term $F^{7}$, and so introduces the dimension $30 \times 7 = 210$. This is confirmed by (to 15 ppm, 1.1 ppm, 56 ppm):
 $$2/\delta \approx (R/\lambdabar_{e})^{1/210} \approx (1/2d_{e}) ln(pH)/lna \approx (1/d_e^{2})ln\tau/ln\mu$$
-with the masses of the heavy leptons (Section 9.5). This implies a dramatic geo-combinatorial relation between $a$ and $p$ : $p^{p^{2}} \approx (a^{2})^{a^{3}}$ and confirms the central computational role of $\delta = R^{\prime}/R = pH/a^{3}$, which is to 1.6 ppm: $\delta \approx e^{2/e^2}$, confirming the central role of $e$ (section 9.1).
+with $\mu$ and $tau$ the (normalised to electron) masses of the heavy leptons (Section 9.5). This implies a geo-combinatorial relation between $a$ and $p$ : $p^{p^{2}} \approx (a^{2})^{a^{3}}$ and confirms the central computational role of $\delta = R^{\prime}/R = pH/a^{3}$, which is to 1.6 ppm: $\delta \approx e^{2/e^2}$, confirming the central role of $e$ (section 9.1).
 
 \markright{F.M. Sanchez,\ V.A. Kotov,\ M. Grosmann,\ D. Weigel,\ R. Veysseyre,\ C. Bizouard,\ N. Flawisky,\ D. Gayral,\ L. Gueroult, \textit{Back to Cosmos}}
 \section{The special holographic relations}
@@ -532,7 +532,7 @@ The holographic technique, based on the properties of a coherent wave is by far 
 
 The students of the first author realized in 1987 a hologram by scanning a 1 mW security power laser beam upon a photosensible area of $0.6 m^2$. The argentic emulsion depth 10 microns permitted false color to be obtained by varying illumination through a photo-mask, and use of a shrinkable emulsion chemical process. The information contained in this hologram reached $10^{15}$ bit, obtained in 12 minutes of scanning exposition. Then, the first author claimed \textit{'such an efficient way of dealing information must be used by Nature'}. Turning to the impressive data of Particle Physics, after an intensive study, holographic relations were indeed found, and its arithmetical form, the Holic Principle was presented at ANPA 16 (Cambridge, 1994) \cite{Sanchez4}. In Sept. 1997, the Orsay University attributes a sabbatical year, giving time to reexamine the foundation of cosmology. \textit{In the three first minutes, the half-radius of visible Universe was obtained}. After several weeks, the scanning holography of section 3 was established. After rejection by the Orsay university and Paris Academy, this was put in March 1998 in a closed draft in the Acad\'{e}mie des Sciences de Paris, under the title \textit{ 'L'Univers conserve-t-il l-information ?'}.
 
-Strangely enough, when the first author's publication was blocked (1993-1995), a Holographic Principle was coined by some theoreticians \cite{Bousso}, which were not specialists in this domain. The origin of this appellation is not clear. One may think that the name comes from the idea of dimension reduction, from 3D to 2D, similar to the visual impression in current visible holograms (in fact holography is only the 2D restitution of a propagating wave). It this respect, it is strange that no one tried to extend this process to 1D. The idea of temporal 1D holography was proposed in the first author's thesis as soon as 1975. Moreover, the standard Holographic Principle is limited to using the Plank area. However, it is natural to suppose that they are other holographic wavelengths. In fact, \textit{the Topological Axis is the reunion of eight 1D-2D holographic relations}. We present here three more confirmations. 
+Strangely enough, when the first author's publication was blocked (1993-1995), a Holographic Principle was coined by some theoreticians \cite{Bousso}, which were not specialists in this domain. The origin of this appellation is not clear. One may think that the name comes from the idea of dimension reduction, from 3D to 2D, similar to the visual impression in current visible holograms (in fact holography is only the 2D restitution of a propagating wave). It this respect, it is strange that no one tried to extend this process to 1D. The idea of temporal 1D holography was proposed in the first author's thesis as soon as 1975. While the standard Holographic Principle is limited to using the Plank area. However, it is natural to suppose that they are other holographic wavelengths. In fact, \textit{the Topological Axis is the reunion of eight 1D-2D holographic relations}. We present here three more confirmations. 
 
 \subsection{The Conservation of Information}
 
