--- a/test.tex
+++ b/test.tex
@@ -340,7 +340,7 @@ This $t_K$ value will be confirmed, in the ppb range, by the value deduced from 
 
 From the holographic two-step interaction \cite{Sanchez1}, it was deduced that the Kotov period is associated with the photon mass. With the above value, it is $m_{ph} = \hbar/c^{2} t_{K} \approx 1.222 \times 10^{-55}$ kg, and the graviton mass is: 
 $m_{gr}\, = m_{ph} /a_{w} \approx 3.722 \times 10^{-67} $ kg.
-The ratios with electron mass (Fig.1) corresponds respectively to n = 24 and $n = \Gamma$, the Atiyah constant (section 8.2). One notes the relation (0.1\%), very usefull in the following:
+The ratios with electron mass corresponds respectively to the \textit{canonical values} n = 24 and n = 26 (Fig.1). The following relation (0.1\%), will be very usefull in the following:
 \begin{equation}
 M/m_{ph} \approx (3/e)O^2_M
 \end{equation}
