--- a/test.tex
+++ b/test.tex
@@ -340,7 +340,7 @@ This $t_K$ value will be confirmed, in the ppb range, by the value deduced from 
 
 From the holographic two-step interaction \cite{Sanchez1}, it was deduced that the Kotov period is associated with the photon mass. With the above value, it is $m_{ph} = \hbar/c^{2} t_{K} \approx 1.222 \times 10^{-55}$ kg, and the graviton mass is: 
 $m_{gr}\, = m_{ph} /a_{w} \approx 3.722 \times 10^{-67} $ kg.
-The ratios with electron mass corresponds respectively to the \textit{canonical values} n = 24 and n = 26 (Fig.1). The following relation (0.1\%), will be very usefull in the following:
+The ratios with electron mass corresponds respectively to the \textit{canonical values} n = 24 and n = 26 (Fig.1). The following relation (0.1\%), will be very usefull in the section 5:
 \begin{equation}
 M/m_{ph} \approx (3/e)O^2_M
 \end{equation}
@@ -1154,9 +1154,9 @@ deterministic, trans-planckian, cyclic, topological and inverse-anthropic}. It i
 %In particular, the pre-Socratic Parmenide philosophy of Permanence must be reconsidered favorably.
 
       This article leads to many predictions, in particular:
-\item 1/  The very large infra-red telescopes in preparation will show in the very far field old galaxies instead of expected young ones. Then no artifice, such as inflation, dark energy, multiverse ..., will not save the standard evolutionary model, based on the impefect cosmological principle.
+\item 1/  The very large infra-red telescopes will show in the very far field old galaxies instead of expected young ones. Then no artifice, such as inflation, dark energy, multiverse ..., will not save the standard evolutionary model, based on the impefect cosmological principle.
 \item 2/ The CMB temperature will appear invariant. 
-\item 3/ The Particle Physics will integrate the Koide relation together with the Koide-Sanchez constant, and introduce massive gluons and composite quark down.
+\item 3/ The Particle Physics will integrate the Koide relation together with the Koide-Sanchez constant, and introduce composite quark down and massive photon, graviton and gluons.
 \item 4/ Computational software should be boosted by the principle of multi-base computation.
 \item 5/ The multiple connections with the DNA chain seems to imply it is a 1D hologram. Recent studies \cite{Widom} are on this way.
 \item 6/ The Lucas-Lehmer series, in connection with the the canonical generators ($\sqrt{n}+\sqrt{(n+1)}$), especially the Planck-Fermat's one ($1+\sqrt2$) will define $a$.
