--- a/test.tex
+++ b/test.tex
@@ -1180,7 +1180,7 @@ Submitted on April 1st, 2019 / Accepted on April 6th, 2019
 \bibitem{Carr} Carr B.J. and Rees M.J., ``The anthropic principle and the
 structure of the physical world'', Nature 278, 605--612 (1979).
 
-\bibitem{Eddington} Eddington A.S. The Fundamental Theory (Cambridge, 1946).
+\bibitem{Eddington} Eddington A.S. ``The Fundamental Theory'' (Cambridge, 1946).
 
 \bibitem{Sanchez1} Sanchez F.M.``A Coherent Resonant Cosmology Approach and Its Implications in Microphysics and Biophysics''. Springer. Progress in Theoretical Chemistry and Physics 30 (2017), p. 375--407; DOI 10.1007/978-3-319-50255-7-23.  Sanchez F.M. ``Coherent Cosmology''. Vixra.org:1601.0011 (2017). Sanchez F.M., Kotov V. and Bizouard C. ''Towards Coherent Cosmology'', Galilean Electrodynamics, special issue, 63--80 (2013).
 
@@ -1212,6 +1212,8 @@ Kotov V.A. ``Fast spinning of planets''. Earth Moon Planets 122(1), 43--52
 syst\`eme solaire''. Compt. Rend. Acad. Sci. Paris. 222, 220--221 (1946).
 Kotov V.A. ``Motion of the fast exoplanets''. Astrophys. Space Sci. 363(3), 1-5
 (2018); DOI: 10.1007/s10509-018-3278-1.
+
+\bibitem{Robles} Robles P. and Claro F. ``Can there be massive photons ? A pedagogical glance at the origin of mass''. European Journal of Physics. 33(5) 1217, (2012).
 
 \bibitem{Tanabashi} Tanabashi M., Hagiwara K., Hikasa K., et al. (Particle Data
 Group). ``The review of particle physics''. Phys. Rev. D, 98, 030001 (2018);
